// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vimeo Video Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-xb9rjn"
      style="width: auto; height: auto;"
    />
  </div>
</DocumentFragment>
`;

exports[`Vimeo Video Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-0"
  >
    <div
      class="css-xb9rjn"
      style="width: auto; height: auto;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</DocumentFragment>
`;
